--- a/index.html
+++ b/index.html
@@ -8,86 +8,90 @@
 
 <p>
     <h2>MATH 1210 Grade Calculator (Fall 2020)</h2>
-    <h3>Please Enter Your Grade For Each Assignment</h3>
-    <body>If you have any suggestions, questions, etc., feel free to email me at lrs5jy@virginia.edu :)</body>
+    <h3>Please Enter Your Grade (out of 100) For Each Assignment</h3>
+    <body>Updated 9-28-2020: This grade calculator was created for MATH 1210 at UVA for the Fall 2020
+    Semester. <br>
+    It requires a grade in all categories as it is based on the point value (not the
+    percentage), so if you don't know your grade exactly, just guess. <br><br>
+    If you have any suggestions, questions, etc., feel free to email me at lrs5jy@virginia.edu :)</body>
     <TABLE BORDER=2 CELLSPACING=2 CELLPADDING=2>
 
     <tr>
     <td>Assignment</td>
     <td>Points Possible</td>
-    <td>Grade (out of 100)</td>
+    <td>Grade</td>
     </tr>
 
     <tr>
     <td>Class-Prep</td>
     <td>10</td>
-    <td><input type="text" id="cp" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');" id="cp" size=2 value=""></td>
     </tr>
 
     <tr>
     <td>Piazza</td>
     <td>8</td>
-    <td><input type="text" id="piazza" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');"id="piazza" size=2 value=""></td>
     </tr>
 
     <tr>
     <td>In-Class Polling</td>
     <td>10</td>
-    <td><input type="text" id="polls" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');"id="polls" size=2 value=""></td>
     </tr>
 
     <tr>
     <td>WebAssign Homework</td>
     <td>10</td>
-    <td><input type="text" id="hw" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');"id="hw" size=2 value=""></td>
     </tr>
 
         <tr>
     <td>Collected Homework</td>
     <td>10</td>
-    <td><input type="text" id="cw" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');"id="cw" size=2 value=""></td>
     </tr>
 
         <tr>
     <td>Quiz 1</td>
     <td>4</td>
-    <td><input type="text" id="q1" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');" id="q1" size=2 value=""></td>
     </tr>
 
         <tr>
     <td>Quiz 2</td>
     <td>4</td>
-    <td><input type="text" id="q2" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');" id="q2" size=2 value=""></td>
     </tr>
 
         <tr>
     <td>Quiz 3</td>
     <td>4</td>
-    <td><input type="text" id="q3" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');"id="q3" size=2 value=""></td>
     </tr>
 
         <tr>
     <td>Quiz 4</td>
     <td>4</td>
-    <td><input type="text" id="q4" size=2 value=""></td>
+    <td><input type="number"min="0" max="100" step="0.01" oninput="validity.valid||(value='');" id="q4" size=2 value=""></td>
     </tr>
 
         <tr>
     <td>Exam 1</td>
     <td>12</td>
-    <td><input type="text" id="e1" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');"id="e1" size=2 value=""></td>
     </tr>
 
         <tr>
     <td>Exam 2</td>
     <td>12</td>
-    <td><input type="text" id="e2" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');"id="e2" size=2 value=""></td>
     </tr>
 
             <tr>
     <td>Final Exam</td>
     <td>12</td>
-    <td><input type="text" id="final" size=2 value=""></td>
+    <td><input type="number" min="0" max="100" step="0.01" oninput="validity.valid||(value='');" id="final" size=2 value=""></td>
     </tr>
 
     <br><br>
