--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Semester. <br>
     It requires a grade in all categories as it is based on the point value (not the
     percentage), so if you don't know your grade exactly, just guess. <br><br>
-    If you have any suggestions, questions, etc., feel free to email me at lrs5jy@virginia.edu :)</body>
+    If you have any suggestions, other features you'd like to see, or if you just enjoyed using this, feel free to email me at lrs5jy@virginia.edu :)</body>
     <TABLE BORDER=2 CELLSPACING=2 CELLPADDING=2>
 
     <tr>
